fix: fix screen overflow for mobile devices

--- a/style.css
+++ b/style.css
@@ -361,6 +361,7 @@ h6 {
     .section {
         padding: 20px;
         flex-direction: column !important;
+        max-width: 100dvw !important;
 
         .container {
             width: 100% !important;
@@ -370,8 +371,10 @@ h6 {
 
     #header {
         
-        & container {
-            flex-direction: column-reverse !important;
+        & .container {
+            flex-direction: column !important;
+            overflow-x: hidden !important;
+            padding: 0 !important;
         }
 
         & .logo {
@@ -383,14 +386,14 @@ h6 {
         & .capa-img {
             width: 700px;
             position: relative;
-            left: -50px;
+            left: -70px;
             top: -25px;
         }
 
         &::after {
             background-size: 1000px !important;
             height: calc(100dvh + 100px) !important;
-            top: 0px !important;
+            top: calc( 0px + 40px) !important;
         }
     }
 
@@ -418,6 +421,7 @@ h6 {
         & .container {
             flex-direction: column;
             padding: 20px !important;
+           
 
             & .container-column {
                 width: 90% !important;
@@ -426,13 +430,20 @@ h6 {
                     text-align: justify !important;
                     width: 80% !important;
                 }
+
+                
             }
         }
+    }
+
+    .doces-s5, .doces {
+        left: -150px !important;
     }
 
     body {
         position: relative;
         left: 0px !important;
+        max-width: 100vw !important;
     }
 
     
